force-app/main/default/objects/ECA_Evaluation_Setting__mdt.object
<CustomObject>
    <description>Stores settings for ECA evaluation rewrite.</description>
    <fields>
        <fullName>AssignmentLogic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssignmentLogic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletionLogic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CompletionLogic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DebugMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable logging/printing of certain data in debugMode</description>
        <label>DebugMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Toggle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewStatus__c</fullName>
        <label>NewStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ECA Status Mapping</fullName>
                    <default>true</default>
                    <label>ECA Status Mapping</label>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ECA Evaluation Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>DeveloperName</columns>
        <columns>Status__c</columns>
        <columns>NewStatus__c</columns>
        <columns>AssignmentLogic__c</columns>
        <columns>CompletionLogic__c</columns>
        <columns>DebugMode__c</columns>
        <columns>Feature_Toggle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>ECA Evaluation Settings</pluralLabel>
</CustomObject>