force-app/main/default/objects/ECA_Evaluation_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>DeveloperName</columns>
    <columns>Status__c</columns>
    <columns>NewStatus__c</columns>
    <columns>AssignmentLogic__c</columns>
    <columns>CompletionLogic__c</columns>
    <columns>DebugMode__c</columns>
    <columns>Feature_Toggle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>